fixed visual detail of cards rendering around the 1600px width range.  reversed order of projects to display.  fixed card title spillage in the cases of being too long

--- a/public/style.css
+++ b/public/style.css
@@ -161,6 +161,11 @@ span {
     border: 1px solid gray
 }
 
+.smallerTitles {
+    font-size: 16px !important;
+    font-weight: 400 !important;
+}
+
 @media only screen and (max-width: 900px) {
 
     .hasSmallScreen {
@@ -255,6 +260,8 @@ span {
     .card.horizontal, .card-image {
         max-width: 100% !important;
     }
+
+    
     
 }
 
@@ -288,7 +295,7 @@ span {
     
     #col1, #col2, #col3 {
         position: relative;
-        left: 2rem;
+        left: 4rem;
     }
     
     @-webkit-keyframes fade {
@@ -382,7 +389,7 @@ span {
     
     #col1, #col2, #col3 {
         position: relative;
-        left:2rem;
+        left: 3rem;
     }
 
     #portfolioRow {
